--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,10 @@
 
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      
+    
+        {% block content %}
+
+        {% endblock %}
     </main>
   </div>
 </div>
