--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,4 +1,6 @@
-<h1>Expenses List</h1>
+{% extends 'base.html' %}
+
+<h1>Expenses List</h2>
 
 <ul class ="list-group">
     <li class="list-group-item">Bought Beer</li>
