--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
 
     
 
-<link href="{% assets 'css/bootstrap.min.css '%}" rel="stylesheet">
-<link href="{% assets 'css/main.css '%}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.min.css '%}" rel="stylesheet">
+<link href="{% static 'css/main.css '%}" rel="stylesheet">
 
     
     <!-- Custom styles for this template -->
