--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="{% assets "css/dashboard.css" %}" rel="stylesheet">
+    <link href="{% static "css/dashboard.css" %}" rel="stylesheet">
   </head>
   <body>
     
