--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
       <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"></script>
       <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha"></script>
       {% comment %} <script src="dashboard.js"></script> {% endcomment %}
-      <script src="{% static 'js/dashboard.js' %}"> </script>
+      <script src="{% static 'js/main.js' %}"> </script>
         
     </body>
 </html>
