--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -33,28 +33,17 @@
       <ul class="nav flex-column mb-2">
         <li class="nav-item">
           <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Current month
+            
+            Expenses Summary
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">
             <span data-feather="file-text" class="align-text-bottom"></span>
-            Last quarter
+            Income Summary
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Social engagement
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Year-end sale
-          </a>
-        </li>
+        
       </ul>
     </div>
   </nav>
