--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -27,9 +27,21 @@
 
 
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <main role="main" class="col-md-12">
     
         {% block content %}
+
+            <div class="col-md-3">
+
+            </div>
+
+            <div class="col-md-3">
+
+            </div>
+
+            <div class="col-md-3">
+
+            </div>
 
         {% endblock %}
     </main>
