--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -29,21 +29,26 @@
 
     <main role="main" class="col-md-12">
     
-        {% block content %}
+            <div class="card">
+
+            </div>
+        
 
             <div class="col-md-3">
 
             </div>
 
+            <div class="col-md-6">
+                {% block content %}
+
+                {% endblock %}
+            </div>
+
+
             <div class="col-md-3">
 
             </div>
 
-            <div class="col-md-3">
-
-            </div>
-
-        {% endblock %}
     </main>
   </div>
 </div>
