--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+
+{% block content %}
+
+
 <h1>Expenses List</h2>
 
 <ul class ="list-group">
@@ -16,3 +20,5 @@
     <li class="list-group-item">Bought Beer</li>
     <li class="list-group-item">Bought Beer</li>
 </ul> 
+
+{% endblock content %}
