--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pandas {% block title %}
-        {% endblock %}
+        {% endblock title %}
     </title>
 
     {% comment %} <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/dashboard/"> {% endcomment %}
@@ -41,7 +41,7 @@
             <div class="col-md-6">
                 {% block content %}
 
-                {% endblock %}
+                {% endblock content %}
             </div>
 
 
