--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -22,12 +22,7 @@
   </head>
   <body>
 
-<div class="container-fluid">
-  <div class="row">
-
-
-
-    <main role="main" class="col-md-12">
+    <main role="main">
     
             <div class="card">
 
