--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -2,12 +2,30 @@
 
 {% block content %}
 
-<div class="card">
-  <div class="card-body">
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
 
-<h1>Login</h1>
+    <div class="card">
 
+      <div class="card-title">
+        <h4>Register for a free account</h4>
+
+
+        <form action="" method="post">
+          <div class="form-group">
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              id="emailField"
+              />
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
+  <div class="col-md-3"></div>
 </div>
 
 {% endblock content %}
