--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -15,12 +15,39 @@
         <form action="" method="post">
           <div class="form-group">
             <input
-              type="email"
-              class="form-control"
-              name="email"
-              id="emailField"
+              type="text"
+              class="form-control form-control-sm"
+              name="usernmae"
+              id="usernameField"
+              placeholder="Username"
               />
           </div>
+
+
+
+          <div class="form-group">
+            <input
+              type="email"
+              class="form-control form-control-sm"
+              name="email"
+              id="emailField"
+              placeholder="Email"
+              />
+          </div>
+
+          <div class="form-group">
+            <input
+              type="password"
+              class="form-control form-control-sm"
+              name="password"
+              id="passwordField"
+              placeholder="Password"
+              />
+
+              <small class="float-right">Show</small>
+          </div>
+
+          <input type="submit" value="Register" class="btn btn-block"/>
         </form>
       </div>
     </div>
